@@ -50,6 +50,15 @@
     <h2>News</h2>
 
     <blockquote>
+      <p><b>01-21-2000</b> Released version 0.7.
+
+      <blockquote>
+        Memory requirements for creating classical photomosaics have
+        been lowered tremendously in this version. Also, this version
+        features a new option for scaling the input image (thanks to
+        Osku Salerma).
+      </blockquote>
+
       <p><b>01-15-2000</b> Released version 0.6. 
 
       <blockquote>
@@ -75,8 +84,8 @@
     <h2>Download</h2>
 
     <blockquote>
-      You can download the source code for version 0.6
-      <a href="metapixel-0.6.tar.gz">here</a>.
+      You can download the source code for version 0.7
+      <a href="metapixel-0.7.tar.gz">here</a>.
     </blockquote>
 
     <h2>Legal Conditions</h2>
