@@ -1,3 +1,9 @@
+Changes since version 0.6:
+
+  * scaling of input image added
+
+  * tremendous memory usage improvement for classical mosaics
+
 Changes since version 0.5:
 
   * introduces the subpixel image comparison metric
